# shandong-gaokao-volunteer-planner

./: LICENSE  README.md
github-open-source-20260701-201019/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_SOURCES.md  LICENSE  NOTICE  OPEN_SOURCE_RELEASE.md  README.md  SECURITY.md  pyproject.toml  start-sample-macos.command  start-sample-windows.bat
github-open-source-20260701-201019/data/sample/: admissions_sample.csv  score_rank_sample.csv
github-open-source-20260701-201019/data/sources/: sdzk_official_sources.json
github-open-source-20260701-201019/docs/: DEVELOPMENT_CONTROL.md  SCIENTIFIC_PLAN.md
github-open-source-20260701-201019/scripts/: build_discipline_quality.py  build_interest_major_map.py  build_postgraduate_rates.py  build_release_manifest.py  convert_sdzk_xls.py  curate_school_major_trial_classes.py  curate_unmapped_interest_majors.py  discover_sdzk_sources.py  download_official_sources.py  generate_static_report.py  import_science_top50k_reference.py  refresh_2026_official_data.py  serve_app.py
github-open-source-20260701-201019/src/gaokao_decision/: __init__.py  cli.py  commercial.py  database.py  importer.py  models.py  plan.py  rank_conversion.py  recommend.py  school_profiles.py  scoring.py  sdzk_parser.py  validation.py
github-open-source-20260701-201019/tests/: test_commercial.py  test_database.py  test_discipline_quality.py  test_plan.py  test_rank_conversion.py  test_recommender.py  test_sdzk_parser.py  test_serve_app.py
